Update license title

--- a/licenses/Credits.html
+++ b/licenses/Credits.html
@@ -382,7 +382,7 @@
 									<div class="panel-title">
 										<a class="pull-right homepage_link" href="http://snoopy.sourceforge.net">homepage</a>
 										<a data-toggle="collapse" data-parent="#accordions" href="#p13">
-											Snoopy [GNU] - v1.0
+											Snoopy [LGPL] - v1.0
 										</a>
 									</div>
 								</div>
@@ -776,7 +776,7 @@
 									<div class="panel-title">
 										<a class="pull-right homepage_link" href="http://www.codeplex.com/PHPExcel">homepage</a>
 										<a data-toggle="collapse" data-parent="#accordions" href="#p31">
-											PHPExcel [GNU] - v1.8.0
+											PHPExcel [GNU] [external library] - v1.8.0
 										</a>
 									</div>
 								</div>
@@ -1222,7 +1222,7 @@
 									<div class="panel-title">		
 										<a class="pull-right homepage_link" href="http://docs.dhtmlx.com/gantt/">homepage</a>		
 										<a data-toggle="collapse" data-parent="#accordions" href="#p52">		
-											dhtmlxGantt [GPL] - v3.2.0 
+											dhtmlxGantt [GPL][external library] - v3.2.0 
 										</a>		
 									</div>	
 								</div>
@@ -1240,7 +1240,7 @@
 									<div class="panel-title">		
 										<a class="pull-right homepage_link" href="https://roundcube.net/">homepage</a>		
 										<a data-toggle="collapse" data-parent="#accordions" href="#p53">		
-											Roundcube Webmail [GPL] - v1.1.1
+											Roundcube Webmail [GPL][external library] - v1.1.1
 										</a>		
 									</div>	
 								</div>
@@ -1524,7 +1524,7 @@
 									<div class="panel-title">
 										<a class="pull-right homepage_link" href="https://github.com/fooplugins/FooTable/tree/V2">homepage</a>
 										<a data-toggle="collapse" data-parent="#accordions" href="#p64">
-											FooTable [GNU] - v2.0.3
+											FooTable [MIT] - v2.0.3
 										</a>
 									</div>
 								</div>
@@ -1576,7 +1576,7 @@
 									<div class="panel-title">
 										<a class="pull-right homepage_link" href="https://github.com/mpdf/mpdf">homepage</a>
 										<a data-toggle="collapse" data-parent="#accordions" href="#p66">
-											mPDF [GPL] - v6.0
+											mPDF [GPL][external library] - v6.0
 										</a>
 									</div>
 								</div>
