Added new version of PHPMailer library

--- a/licenses/Credits.html
+++ b/licenses/Credits.html
@@ -2077,5 +2077,22 @@
 																</div>
 															</div>
 														</div>
+														<div class="panel panel-default">
+															<div class="panel-heading">
+																<div class="panel-title">
+																	<a class="pull-right homepage_link" href="https://github.com/PHPMailer/PHPMailer">homepage</a>
+																	<a data-toggle="collapse" data-parent="#accordions" href="#p75">
+																		PHPMailer [LGPL-2.1] - v5.2.19
+																	</a>
+																</div>
+															</div>
+															<div id="p75" class="panel-collapse collapse">
+																<div class="panel-body">
+																	PHPMailer is a full-featured email creation and transfer class for PHP
+																	<br /><br />
+																	This software is distributed under the LGPL 2.1 license. Please read LICENSE for information on the software availability and distribution.
+																</div>
+															</div>
+														</div>
 														</div>
 														</div>
