Added new library clipboard.js

--- a/licenses/Credits.html
+++ b/licenses/Credits.html
@@ -2094,5 +2094,25 @@
 																</div>
 															</div>
 														</div>
+														<div class="panel panel-default">
+															<div class="panel-heading">
+																<div class="panel-title">
+																	<a class="pull-right homepage_link" href="https://github.com/zenorocha/clipboard.js">homepage</a>
+																	<a data-toggle="collapse" data-parent="#accordions" href="#p76">
+																		clipboard.js [MIT] - v1.5.16
+																	</a>
+																</div>
+															</div>
+															<div id="p76" class="panel-collapse collapse">
+																<div class="panel-body">
+																	Copying text to the clipboard shouldn't be hard. It shouldn't require dozens of steps to configure or hundreds of KBs to load. But most of all, it shouldn't depend on Flash or any bloated framework.
+																	<br /><br />
+																	That's why clipboard.js exists.
+																	<br /><br />
+																	The MIT License (MIT)<br />
+																	Licensed MIT © Zeno Rocha hi@zenorocha.com
+																</div>
+															</div>
+														</div>
 														</div>
 														</div>
