--- a/licenses/Credits.html
+++ b/licenses/Credits.html
@@ -2058,5 +2058,20 @@
 																</div>
 															</div>
 														</div>
+														<div class="panel panel-default">
+															<div class="panel-heading">
+																<div class="panel-title">
+																	<a class="pull-right homepage_link" href="https://github.com/rmccue/Requests">homepage</a>
+																	<a data-toggle="collapse" data-parent="#accordions" href="#p77">
+																		Requests for PHP [ISC Licensed] - v1.7.0
+																	</a>
+																</div>
+															</div>
+															<div id="p77" class="panel-collapse collapse">
+																<div class="panel-body">
+																	Requests is a HTTP library written in PHP, for human beings. It is roughly based on the API from the excellent Requests Python library. Requests is ISC Licensed (similar to the new BSD license) and has no dependencies, except for PHP 5.2+.
+																</div>
+															</div>
+														</div>
 														</div>
 														</div>
