Added new library DOMPurify

--- a/licenses/Credits.html
+++ b/licenses/Credits.html
@@ -2137,5 +2137,25 @@
 																</div>
 															</div>
 														</div>
+														<div class="panel panel-default">
+															<div class="panel-heading">
+																<div class="panel-title">
+																	<a class="pull-right homepage_link" href="https://github.com/cure53/DOMPurify">homepage</a>
+																	<a data-toggle="collapse" data-parent="#accordions" href="#p79">
+																		DOMPurify [MPL-2.0] - v0.8.9
+																	</a>
+																</div>
+															</div>
+															<div id="p79" class="panel-collapse collapse">
+																<div class="panel-body">
+																	DOMPurify<br />
+																	Copyright 2015 Mario Heiderich<br />
+																	DOMPurify is free software; you can redistribute it and/or modify it under the terms of either:<br />
+																	a) the Apache License Version 2.0, or<br />
+																	b) the Mozilla Public License Version 2.0<br />
+																</div>
+															</div>
+														</div>
+
 														</div>
 														</div>
