--- a/licenses/Credits.html
+++ b/licenses/Credits.html
@@ -412,30 +412,6 @@
 							<div class="panel panel-default">
 								<div class="panel-heading">
 									<div class="panel-title">
-										<a class="pull-right homepage_link" href="http://jacklmoore.com/autosize/">homepage</a>
-										<a data-toggle="collapse" data-parent="#accordions" href="#p15">
-											Autosize [MIT] - v1.14 
-										</a>
-									</div>
-								</div>
-								<div id="p15" class="panel-collapse collapse ">
-									<div class="panel-body">
-										The MIT License (MIT)
-
-										Copyright (c) 2015 Jack Moore
-
-										Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-
-										The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-										THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-
-									</div>
-								</div>
-							</div>
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									<div class="panel-title">
 										<a class="pull-right homepage_link" href="http://bxslider.com">homepage</a>
 										<a data-toggle="collapse" data-parent="#accordions" href="#p16">
 											BxSlider [WTFPL] - v4.1
@@ -2156,6 +2132,55 @@
 																</div>
 															</div>
 														</div>
-
+														<div class="panel panel-default">
+															<div class="panel-heading">
+																<div class="panel-title">
+																	<a class="pull-right homepage_link" href="https://github.com/uxsolutions/bootstrap-datepicker">homepage</a>
+																	<a data-toggle="collapse" data-parent="#accordions" href="#p80">
+																		bootstrap-datepicker [Apache License 2.0] - v1.7.1
+																	</a>
+																</div>
+															</div>
+															<div id="p80" class="panel-collapse collapse">
+																<div class="panel-body">
+																	<a href="https://uxsolutions.github.io/bootstrap-datepicker">https://uxsolutions.github.io/bootstrap-datepicker</a><br />
+																	<a href="https://bootstrap-datepicker.readthedocs.io">https://bootstrap-datepicker.readthedocs.io</a><br />
+																	Apache License<br />
+																	Version 2.0, January 2004<br />
+																	http://www.apache.org/licenses/<br />
+																</div>
+															</div>
+														</div>
+														<div class="panel panel-default">
+															<div class="panel-heading">
+																<div class="panel-title">
+																	<a class="pull-right homepage_link" href="https://github.com/dangrossman/bootstrap-daterangepicker">homepage</a>
+																	<a data-toggle="collapse" data-parent="#accordions" href="#p81">
+																		bootstrap-daterangepicker [MIT] - v2.1.25
+																	</a>
+																</div>
+															</div>
+															<div id="p81" class="panel-collapse collapse">
+																<div class="panel-body">
+																	This code is made available under the same license as Bootstrap. Moment.js is included in this repository for convenience. It is available under the MIT license.
+																</div>
+															</div>
+														</div>
+														<div class="panel panel-default">
+															<div class="panel-heading">
+																<div class="panel-title">
+																	<a class="pull-right homepage_link" href="https://github.com/moment/moment/">homepage</a>
+																	<a data-toggle="collapse" data-parent="#accordions" href="#p82">
+																		Moment.js [MIT] - v2.18.1
+																	</a>
+																</div>
+															</div>
+															<div id="p82" class="panel-collapse collapse">
+																<div class="panel-body">
+																	A lightweight JavaScript date library for parsing, validating, manipulating, and formatting dates.<br />
+																	Moment.js is freely distributable under the terms of the MIT license.
+																</div>
+															</div>
+														</div>
 														</div>
 														</div>
