--- a/licenses/Credits.html
+++ b/licenses/Credits.html
@@ -2129,5 +2129,20 @@
 																</div>
 															</div>
 														</div>
+														<div class="panel panel-default">
+															<div class="panel-heading">
+																<div class="panel-title">
+																	<a class="pull-right homepage_link" href="https://github.com/sensiolabs/security-checker">homepage</a>
+																	<a data-toggle="collapse" data-parent="#accordions" href="#p82">
+																		SensioLabs Security Checker [MIT] - v4.0.4
+																	</a>
+																</div>
+															</div>
+															<div id="p82" class="panel-collapse collapse">
+																<div class="panel-body">
+																	The SensioLabs Security Checker is a command line tool that checks if your application uses dependencies with known security vulnerabilities. It uses the SensioLabs Security Check Web service and the Security Advisories Database.
+																</div>
+															</div>
+														</div>
 														</div>
 														</div>
