--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title><%= htmlWebpackPlugin.options.productName %></title>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="<%= htmlWebpackPlugin.options.productDescription %>"
+    />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta
+      name="viewport"
+      content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (htmlWebpackPlugin.options.ctx.mode.cordova) { %>, viewport-fit=cover<% } %>"
+    />
+    <script src="statics/modules.js"></script>
+  </head>
 
-<head>
-  <title><%= htmlWebpackPlugin.options.productName %></title>
-  <meta charset="utf-8">
-  <meta name="description" content="<%= htmlWebpackPlugin.options.productDescription %>">
-  <meta name="format-detection" content="telephone=no">
-  <meta name="msapplication-tap-highlight" content="no">
-  <meta name="viewport"
-    content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (htmlWebpackPlugin.options.ctx.mode.cordova) { %>, viewport-fit=cover<% } %>">
-  <script src="statics/modules.js"></script>
-</head>
-
-<body>
-  <!-- DO NOT touch the following DIV -->
-  <div id="q-app"></div>
-</body>
-
+  <body>
+    <!-- DO NOT touch the following DIV -->
+    <div id="q-app"></div>
+  </body>
 </html>
