--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,17 +3,14 @@
   <head>
     <title><%= htmlWebpackPlugin.options.productName %></title>
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="<%= htmlWebpackPlugin.options.productDescription %>"
-    />
+    <meta name="description" content="<%= htmlWebpackPlugin.options.productDescription %>" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta
       name="viewport"
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (htmlWebpackPlugin.options.ctx.mode.cordova) { %>, viewport-fit=cover<% } %>"
     />
-    <script src="statics/modules.js"></script>
+    <script async="false" src="./statics/modules.js"></script>
   </head>
 
   <body>
