--- a/src/index.template.dev.html
+++ b/src/index.template.dev.html
@@ -1,9 +1,3 @@
-<?php
-$config = [
-	'baseURL' => \AppConfig::main('site_URL'),
-	'publicDir' => '/dist',
-];
-?>
 <!DOCTYPE html>
 <html>
 
@@ -17,10 +11,10 @@ $config = [
   <meta name="viewport"
     content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (htmlWebpackPlugin.options.ctx.mode.cordova) { %>, viewport-fit=cover<% } %>">
 
-  <link rel="icon" href="/dist/statics/quasar-logo.png" type="image/x-icon">
-  <link rel="icon" type="image/png" sizes="32x32" href="/dist/statics/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/dist/statics/icons/favicon-16x16.png">
-  <script>window.CONFIG = <?php echo json_encode($config); ?>;</script>
+  <link rel="icon" href="statics/quasar-logo.png" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="statics/icons/favicon-16x16.png">
+  <script data-config></script>
   <script src="<%= htmlWebpackPlugin.options.modulesFile %>"></script>
 </head>
 
