Added missing layout changes and cleaned code

--- a/public_html/src/index.html
+++ b/public_html/src/index.html
@@ -13,6 +13,7 @@
     <link href="/node_modules/@mdi/font/css/materialdesignicons.min.css" rel="stylesheet" />
     <link href="/node_modules/animate.css/animate.min.css" rel="stylesheet" />
     <link href="/node_modules/quasar/dist/quasar.min.css" rel="stylesheet" type="text/css" />
+    <link href="/node_modules/quasar/dist/quasar.addon.min.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
